no confused plots or ugly warnings on the console

mrcal.rectified_resolution() is now separate from mrcal.rectified_system(), and
has a callable C implementation

same with mrcal.rectified_system(), rectification_maps

estimate_monocular_calobject_poses_Rt_tocam() ignores invalid input points
This makes calibrating given incomplete chessboard observations work properly

show_projection_diff() can plot vectorfields with multiple distances
And the mrcal-show-projections-diff tool. Same as with heat maps, we plot the
diff for the first distance

mrcal.optimize(), mrcal.optimizer_callback(): all arguments are keyword-only,
most arguments are optional

measurement_index_....() all return <0 if those measurements aren't present

save_image() can write 16bpp grayscale images properly
This requires a more recent libfreeimage than is available on some OSs

mrcal-stereo respects --axis-scale
Not doing this was an oversight

full CAHVORE support

show_residuals_board_observation() reports iobservation_from_worst in its title
Applies to the mrcal-show-residuals-board-observation tool as well. Makes it
simple to regenerate specific plots, even if they were displayed out of order

mrcal-show-residuals-board-observation has --from-glob

Added mrcal.make_perfect_observations()

bug fix: mrcal-stereo can process multiple files with one invocation again

mrcal-stereo can rectify images in parallel

ref_calibration_object() can return the position of ANY point on the chessboard
Not just the chessboard corners.

mrcal-show-... handle --observations better. Both chessboard and point
observations can be shown

show_projection_uncertainty_vs_distance() has distance_min, distance_max,
observed_pixel_uncertainty args. To control the plot better. The defaults are
None, autodetecting the ranges, input uncertainty, so the default behavior does
not change

Projection uncertainty can be computed with fixed points, such as with a
surveyed calibration

* Migration notes 2.2 -> 2.3